--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-trytond_account_check
-=====================
+trytond_account_check_ar
+========================
 
-The account_check module of the Tryton application platform.
+The account_check_ar module of the Tryton application platform.
 See __tryton__.py
 
 Installing
