Add Bank to Third Checks

--- a/es_AR.po
+++ b/es_AR.po
@@ -98,6 +98,10 @@ msgctxt "field:account.third.check,amount:"
 msgid "Amount"
 msgstr "Importe"
 
+msgctxt "field:account.third.check,bank:"
+msgid "Bank"
+msgstr "Banco"
+
 msgctxt "field:account.third.check,clearing:"
 msgid "Clearing"
 msgstr "Clearing"
