--- a/locale/es_AR.po
+++ b/locale/es_AR.po
@@ -2,17 +2,29 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
+msgctxt "error:account.issued.check.debit:"
+msgid "Check \"%s\" is not issued,"
+msgstr "Cheque \"%s\" no está emitido"
+
+msgctxt "error:account.issued.check.debit:"
+msgid "You need to define a check account in the journal \"%s\","
+msgstr "Debe definir la cuenta del cheque en el diario \"%s\","
+
 msgctxt "error:account.third.check.deposit:"
 msgid "Check \"%s\" is not in held,"
 msgstr "Cheque \"%s\" no está en cartera,"
+
+msgctxt "error:account.third.check.deposit:"
+msgid "You need to define a check account in the journal \"%s\","
+msgstr "Debe definir la cuenta del cheque en el diario \"%s\","
 
 msgctxt "error:account.third.check.held:"
 msgid "Check \"%s\" is not draft"
 msgstr "Cheque \"%s\" no es borrador"
 
-msgctxt "error:account.third.check.held:"
-msgid "Check \"%s\" is not draft,"
-msgstr ""
+msgctxt "error:account.voucher:"
+msgid "You need to define a check account in the journal \"%s\","
+msgstr "Debe definir la cuenta del cheque en el diario \"%s\","
 
 msgctxt "field:account.issued.check,amount:"
 msgid "Amount"
@@ -46,10 +58,6 @@ msgctxt "field:account.issued.check,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:account.issued.check,issued:"
-msgid "Issued"
-msgstr "Emitido"
-
 msgctxt "field:account.issued.check,name:"
 msgid "Number"
 msgstr "Número"
@@ -70,10 +78,6 @@ msgctxt "field:account.issued.check,receiving_party:"
 msgid "Receiving Party"
 msgstr "Recibe"
 
-msgctxt "field:account.issued.check,receiving_party_id:"
-msgid "Receiving Party"
-msgstr "Recibe"
-
 msgctxt "field:account.issued.check,signatory:"
 msgid "Signatory"
 msgstr "Firma"
@@ -86,10 +90,6 @@ msgctxt "field:account.issued.check,voucher:"
 msgid "Voucher"
 msgstr "Comprobantes"
 
-msgctxt "field:account.issued.check,voucher_id:"
-msgid "Voucher"
-msgstr "Comprobante"
-
 msgctxt "field:account.issued.check,write_date:"
 msgid "Write Date"
 msgstr "Fecha modificación"
@@ -97,6 +97,18 @@ msgstr "Fecha modificación"
 msgctxt "field:account.issued.check,write_uid:"
 msgid "Write User"
 msgstr "Usuario modificación"
+
+msgctxt "field:account.issued.check.debit.start,bank_account:"
+msgid "Bank Account"
+msgstr "Cuenta Bancaria"
+
+msgctxt "field:account.issued.check.debit.start,date:"
+msgid "Date"
+msgstr "Fecha"
+
+msgctxt "field:account.issued.check.debit.start,id:"
+msgid "ID"
+msgstr "ID"
 
 msgctxt "field:account.journal,issued_check_account:"
 msgid "Issued Check Account"
@@ -150,17 +162,9 @@ msgctxt "field:account.third.check,destiny_party:"
 msgid "Destiny Party"
 msgstr "Destino"
 
-msgctxt "field:account.third.check,destiny_party_id:"
-msgid "Destiny Party"
-msgstr "Destino"
-
 msgctxt "field:account.third.check,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:account.third.check,issued:"
-msgid "Issued"
-msgstr "Emitido"
 
 msgctxt "field:account.third.check,name:"
 msgid "Number"
@@ -190,10 +194,6 @@ msgctxt "field:account.third.check,source_party:"
 msgid "Source Party"
 msgstr "Origen"
 
-msgctxt "field:account.third.check,source_party_id:"
-msgid "Source Party"
-msgstr "Origen"
-
 msgctxt "field:account.third.check,state:"
 msgid "State"
 msgstr "Estado"
@@ -201,10 +201,6 @@ msgstr "Estado"
 msgctxt "field:account.third.check,vat:"
 msgid "Vat"
 msgstr "CUIT"
-
-msgctxt "field:account.third.check,voucher_id:"
-msgid "Voucher"
-msgstr "Comprobante"
 
 msgctxt "field:account.third.check,voucher_in:"
 msgid "Origin Voucher"
@@ -254,10 +250,6 @@ msgctxt "field:account.voucher,third_pay_checks:"
 msgid "Third Checks"
 msgstr "Cheques de Terceros"
 
-msgctxt "field:account.voucher,total_checks:"
-msgid "Checks"
-msgstr "Cheques"
-
 msgctxt "field:account.voucher-account.third.check,create_date:"
 msgid "Create Date"
 msgstr "Fecha creación"
@@ -294,6 +286,10 @@ msgctxt "model:account.issued.check,name:"
 msgid "Account Issued Check"
 msgstr "Cuenta de Cheque Emitido"
 
+msgctxt "model:account.issued.check.debit.start,name:"
+msgid "Issued Check Debit Start"
+msgstr ""
+
 msgctxt "model:account.third.check,name:"
 msgid "Account Third Check"
 msgstr "Cuenta de Cheque de Tercero"
@@ -318,6 +314,10 @@ msgctxt "model:ir.action,name:act_third_check_tree"
 msgid "Third Checks"
 msgstr "Cheques de Terceros"
 
+msgctxt "model:ir.action,name:wizard_issued_check_debit"
+msgid "Check Debit"
+msgstr "Debitar Cheque"
+
 msgctxt "model:ir.action,name:wizard_third_check_deposit"
 msgid "Check Deposit"
 msgstr "Depósito de Cheque"
@@ -335,8 +335,12 @@ msgid "Third Checks"
 msgstr "Cheques de Terceros"
 
 msgctxt "model:ir.ui.menu,name:menu_treasury"
-msgid "treasury"
+msgid "Treasury"
 msgstr "Tesorería"
+
+msgctxt "selection:account.issued.check,clearing:"
+msgid ""
+msgstr ""
 
 msgctxt "selection:account.issued.check,clearing:"
 msgid "24 hs"
@@ -361,6 +365,10 @@ msgstr "Borrador"
 msgctxt "selection:account.issued.check,state:"
 msgid "Issued"
 msgstr "Emitido"
+
+msgctxt "selection:account.third.check,clearing:"
+msgid ""
+msgstr ""
 
 msgctxt "selection:account.third.check,clearing:"
 msgid "24 hs"
@@ -393,6 +401,10 @@ msgstr "Cartera"
 msgctxt "selection:account.third.check,state:"
 msgid "Rejected"
 msgstr "Rechazado"
+
+msgctxt "view:account.issued.check.debit.start:"
+msgid "Check Debit"
+msgstr "Debitar Cheque"
 
 msgctxt "view:account.issued.check:"
 msgid "Extra Info"
@@ -458,13 +470,13 @@ msgctxt "view:account.voucher:"
 msgid "Checks"
 msgstr "Cheques"
 
-msgctxt "view:account.voucher:"
-msgid "Issued Checks"
-msgstr "Cheques Emitidos"
+msgctxt "wizard_button:account.issued.check.debit,start,debit:"
+msgid "Debit"
+msgstr "Débito"
 
-msgctxt "view:account.voucher:"
-msgid "Third Checks"
-msgstr "Cheques de Terceros"
+msgctxt "wizard_button:account.issued.check.debit,start,end:"
+msgid "Cancel"
+msgstr "Cancelar"
 
 msgctxt "wizard_button:account.third.check.deposit,start,deposit:"
 msgid "Deposit"
@@ -473,10 +485,6 @@ msgstr "Depositar"
 msgctxt "wizard_button:account.third.check.deposit,start,end:"
 msgid "Cancel"
 msgstr "Cancelar"
-
-msgctxt "wizard_button:account.third.check.held,start,deposit:"
-msgid "held"
-msgstr "cartera"
 
 msgctxt "wizard_button:account.third.check.held,start,end:"
 msgid "Cancel"
