--- a/locale/es.po
+++ b/locale/es.po
@@ -67,8 +67,8 @@ msgid "Third check \"%s\" is not in Held state"
 msgstr "El cheque de tercero número \"%s\" no figura como \"En cartera\""
 
 msgctxt "error:account.voucher:"
-msgid "You need to define a check account in the journal \"%s\","
-msgstr "Debe definir la cuenta del cheque en el diario \"%s\","
+msgid "You need to define a check account in the journal \"%s\""
+msgstr "Debe definir la cuenta del cheque en el diario \"%s\""
 
 msgctxt "field:account.issued.check,amount:"
 msgid "Amount"
@@ -119,7 +119,7 @@ msgid "Origin"
 msgstr "Origen"
 
 msgctxt "field:account.issued.check,rec_name:"
-msgid "Name"
+msgid "Record Name"
 msgstr "Nombre"
 
 msgctxt "field:account.issued.check,receiving_party:"
@@ -239,7 +239,7 @@ msgid "Origin"
 msgstr "Origen"
 
 msgctxt "field:account.third.check,rec_name:"
-msgid "Name"
+msgid "Record Name"
 msgstr "Nombre"
 
 msgctxt "field:account.third.check,reject_debit_note:"
@@ -331,7 +331,7 @@ msgid "ID"
 msgstr "ID"
 
 msgctxt "field:account.voucher-account.third.check,rec_name:"
-msgid "Name"
+msgid "Record Name"
 msgstr "Nombre"
 
 msgctxt "field:account.voucher-account.third.check,third_check:"
@@ -422,10 +422,9 @@ msgctxt "model:ir.ui.menu,name:menu_treasury"
 msgid "Treasury"
 msgstr "Tesorería"
 
-#, fuzzy
 msgctxt "selection:account.issued.check,clearing:"
 msgid ""
-msgstr "Observaciones de la partida"
+msgstr ""
 
 msgctxt "selection:account.issued.check,clearing:"
 msgid "24 hs"
@@ -451,10 +450,9 @@ msgctxt "selection:account.issued.check,state:"
 msgid "Issued"
 msgstr "Emitido"
 
-#, fuzzy
 msgctxt "selection:account.third.check,clearing:"
 msgid ""
-msgstr "Observaciones de la partida"
+msgstr ""
 
 msgctxt "selection:account.third.check,clearing:"
 msgid "24 hs"
