--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,11 @@
+Version 4.6.0 - 2018-12-29
+* Bug fixes (see git logs for details)
+
 Version 4.4.0 - 2017-09-19
+* Bug fixes (see git logs for details)
 
 Version 4.2.0 - 2017-07-20
+* Bug fixes (see git logs for details)
 
 Version 2.4.0 - 2012-05-30
 * Update to Tryton 2.4
